# cpolycall

./: .gitignore  .npmignore  CMakeLists.txt  Makefile  README.md  TODO.md  cpolycallrc  index.js  package.json  polycall-binding.json
cmake/: cpolycallConfig.cmake.in
examples/: basic.c  cpolycallrc
include/: cpolycall.h
scripts/: verify-dry.ps1  verify-dry.sh
src/: cpolycall.c
tests/: TESTS.md  cpolycall_test.c  package.test.js  polycall_ffi_mock.c  polycall_ffi_mock.h
